web/tomcat/doc/iptables.txt
# Generated by iptables-save v1.4.21 on Wed Dec 23 09:49:05 2015
*nat
:PREROUTING ACCEPT [2:124]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [12:802]
:POSTROUTING ACCEPT [12:802]
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8080
COMMIT
# Completed on Wed Dec 23 09:49:05 2015
# Generated by iptables-save v1.4.21 on Wed Dec 23 09:49:05 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [14695:816841]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
#-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Wed Dec 23 09:49:05 2015
